# stm32l4

./: .gitmodules  CMakeLists.txt
configs/: stm32l4xx_hal_conf.h
